--- a/pagina search/search.html
+++ b/pagina search/search.html
@@ -180,20 +180,6 @@
     <div class="container">
       <div id="player-bar" class="row position-fixed bottom-0 w-100 z-2">
         <div class="d-md-none p-3">
-          <div
-            class="p-3 bg-spotify rounded-3 d-flex justify-content-between position-fixed song-fixed-player">
-            <div class="d-flex">
-              <img width="60px" src="./assets/imgs/main/image-18.jpg" alt="" />
-              <div class="ms-3 d-flex flex-column justify-content-center">
-                <h5 class="m-0">Titolo Canzone</h5>
-                <small>Artista</small>
-              </div>
-            </div>
-            <div class="d-flex align-items-center gap-4">
-              <i class="fs-4 bi bi-heart p-2 fs-3"></i>
-              <i class="bi bi-play p-2 fs-1"></i>
-            </div>
-          </div>
           <div class="d-flex justify-content-around">
             <a
               href="./homepage.html"
@@ -257,28 +243,17 @@
             <i class="fs-5 mx-2 bi bi-skip-forward-fill pointer next-btn"></i>
             <i class="fs-5 mx-2 text-success bi bi-arrow-repeat pointer"></i>
           </div>
-          <div class="d-flex align-items-center">
-            <small class="current-duration">0:00</small>
-            <div class="progress mx-2 flex-grow-1">
-              <div class="bg-white progress-bar" role="progressbar"></div>
-            </div>
-            <small class="duration-song">3:20</small>
+          <div class="progress-bar-container">
+            <div class="progress-bar"></div>
           </div>
-        </div>
-        <div
-          class="col-3 d-flex justify-content-end align-items-center ps-5 pe-3 d-none d-md-flex">
-          <i class="fs-5 px-2 bi bi-mic pointer"></i>
-          <i class="fs-5 px-2 bi bi-view-list pointer"></i>
-          <i class="fs-5 px-2 bi bi-speaker pointer"></i>
-          <i class="fs-2 me-1 bi bi-volume-down pointer"></i>
-          <div class="progress mx-2" style="width: 100px">
-            <div class="bg-white volume-bar" style="width: 30%"></div>
-          </div>
-          <i class="fs-5 px-2 bi bi-arrows-angle-expand pointer"></i>
         </div>
       </div>
     </div>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"></script>
+    <script src="https://cdns-files.deezer.com/js/min/dz.js"></script>
+    <script src="./search.js"></script>
   </body>
 </html>
-
-<!--Ciao-->>
